# rust-eip712-example

./: Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs  node-test.js
