[package]
name = "eip712-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
eip-712-derive = { git = "https://github.com/graphprotocol/eip-712-derive.git" }
hex = "0.4.2"
keccak-hash = "0.10.0"
libsecp256k1 = "0.7.0"